--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <ul>
-    <li><a href="myportfolio.html" class="active">Home</a></li>
+    <li><a href="index.html" class="active">Home</a></li>
     <li><a href="myProjects.html">My Projects</a></li>
     <li><a href="contactme.html">Contact Me</a></li>
     <li><a href="aboutme.html">About Me</a></li>
