--- a/contactme.html
+++ b/contactme.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <ul>
-    <li><a href="myportfolio.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="myProjects.html">My Projects</a></li>
     <li><a href="contactme.html" class="active">Contact Me</a></li>
     <li><a href="aboutme.html">About Me</a></li>
