--- a/myProjects.html
+++ b/myProjects.html
@@ -9,7 +9,7 @@
 <body>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="myprojects.html" class="active">My Projects</a></li>
+    <li><a href="myProjects.html" class="active">My Projects</a></li>
     <li><a href="contactme.html">Contact Me</a></li>
     <li><a href="aboutme.html">About Me</a></li>
   </ul>
