--- a/myProjects.html
+++ b/myProjects.html
@@ -20,7 +20,7 @@
       <a href="projects/frm.html"><em>My Form</em></a><br>
       <a href="projects/nestedtable.html"><em>Nested Table 1</em></a><br>
       <a href="projects/Q6table.html"><em>Table 2</em></a><br>
-      <a href="projects/nested_list.html"><em>Nested List</em></a><br>
+      <a href="projects/nested list.html"><em>Nested List</em></a><br>
       <a href="projects/MatQnP.html"><em>Math Question Paper</em></a><br>
       <a href="projects/GreetingCard.html"><em>Greeting Card </em></a>
     </h2>
