--- a/myProjects.html
+++ b/myProjects.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Projects</title>
   <link rel="stylesheet" href="projects.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <ul>
